# synth_player

./: CMakeLists.txt  README.md  main.cpp
include/freeverb/: freeverb.c  freeverb.h
include/sfs/: sfs.c  sfs.h
include/sinf/: serrno.c  serrno.h  types.h
include/solfege/: solfege.c  solfege.h
include/splayer/: hitser.json  splayer.c  splayer.h
include/ssys/: ssys.h
include/wav/: wav.c  wav.h
